--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
         <nav class="playlist">
           <h2>PLAYLIST</h2>
-          <i class="far fa-plus-square"></i> <a href="#">Crea Playlist</a> <br> 
+          <i class="far fa-plus-square"></i> <a href="#">Crea Playlist</a> <br>
           <a href="#">Nome Playlist</a> <br> <br>
           <a href="#">Nome Playlist</a> <br><br>
           <a href="#">Nome Playlist</a> <br><br>
@@ -38,18 +38,78 @@
           <i class="fas fa-user-circle"></i> <a href="#">John Doe</a>
         </div>
       </section>
+      </header>
       <section id="upgrade">
-
+        <button type="button" name="button">EFFETTUA L'UPGRADE</button>
       </section>
 
       <section id="libreria">
-
+        <nav id="navbar">
+          <a href="#">IN EVIDENZA</a>
+          <a href="#">PODCAST</a>
+          <a href="#">CLASSIFICHE</a>
+          <a href="#">GENERI E MOOD</a>
+          <a href="#">NUOVE USCITE</a>
+          <a href="#">SCOPRI</a>
+        </nav>
+        <h1><strong>Recently played</strong> </h1>
+        <div class="song">
+          <img src="img/metal_lifting.jpg" alt="">
+          <img src="img/stranger.jpeg" alt="">
+          <img src="img/aquietplace.jpeg" alt="">
+          <img src="img/split.jpeg" alt="">
+          <img src="img/cure.jpeg" alt="">
+          <img src="img/sinister.jpeg" alt="">
+        </div>
+        <div class="descrizione">
+          <div class="descrizione1">
+            <h2>Heavy Metal</h2>
+            <p>Subtitle</p>
+          </div>
+          <div class="descrizione2">
+            <h2>Stranger Things</h2>
+            <p>Kyle Dixon & Micheal Stein</p>
+          </div>
+          <div class="descrizione3">
+            <h2>A quiet place</h2>
+            <p>Subtitle</p>
+          </div>
+          <div class="descrizione4">
+            <h2>Split</h2>
+            <p>Subtitle</p>
+          </div>
+          <div class="descrizione5">
+            <h2>A cure for wellness</h2>
+            <p>Subtitle</p>
+          </div>
+          <div class="descrizione6">
+            <h2>Sinister</h2>
+            <p>Subtitle</p>
+          </div>
+        </div>
+        <div class="personalizzazione">
+          <h1><strong>Creato per John Doe</strong> </h1>
+          <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+          <img src="img/radar.jpeg" alt="">
+          <img src="img/mixdaily.jpeg" alt="">
+        </div>
+          <div class="descrizione7">
+            <h2>Release Radar</h2>
+          </div>
+          <div class="descrizione8">
+            <h2>Daily mix 1</h2>
+          </div>
+        <div class="popular">
+          <h1><strong>Artisti più popolari</strong> </h1>
+          <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+          <img src="img/youg.jpeg" alt="">
+          <img src="img/einaudi.jpeg" alt="">
+        </div>
       </section>
       </div>
 
       <footer>
 
       </footer>
-    </header>
   </body>
 </html>
