--- a/index.html
+++ b/index.html
@@ -110,6 +110,44 @@
 
       <footer>
 
+        <!-- parte sinistra -->
+      <div class="parte-sinistra">
+          <div>
+            <img src="img/sinister.jpeg" alt="">
+          </div>
+        <div>
+          <h2>Sinister</h2>
+          <h3>Brano Nome</h3>
+        </div>
+        <div>
+        <a href="#">  <i class="far fa-heart"></i> </a>
+        </div>
+        <div>
+        <a href="#">  <i class="far fa-folder"></i> </a>
+        </div>
+        </div>
+
+        <!-- parte centrale -->
+        <div class="parte-centrale">
+          <div class="bottoni-riproduzione">
+          <a href="#">  <i class="fas fa-volume-down"></i>
+            <i class="far fa-play-circle"></i>
+            <i class="fas fa-volume-up"></i> </a> <br>
+            <div>
+             <p>0:25</p>
+            </div>
+            <div class="barra">
+
+            </div>
+            <div>
+              <p>4:35</p>
+            </div>
+
+          </div>
+        </div>
+        <div class="parte-destra">
+
+        </div>
       </footer>
   </body>
 </html>
