--- a/index.html
+++ b/index.html
@@ -130,21 +130,24 @@
         <!-- parte centrale -->
         <div class="parte-centrale">
           <div class="bottoni-riproduzione">
-          <a href="#">  <i class="fas fa-volume-down"></i>
-            <i class="far fa-play-circle"></i>
-            <i class="fas fa-volume-up"></i> </a> <br>
             <div>
-             <p>0:25</p>
+             <p id="minuto-sinistra">0:25</p>
             </div>
+            <div class="bottoni">
+              <a href="#">  <i class="fas fa-volume-down"></i>
+                <i class="far fa-play-circle"></i>
+                <i class="fas fa-volume-up"></i> </a> <br>
+            </div>
+
+
             <div class="barra">
-
             </div>
             <div>
-              <p>4:35</p>
+              <p id="minuto-destra">4:35</p>
             </div>
-
           </div>
         </div>
+
         <div class="parte-destra">
 
         </div>
