--- a/index.html
+++ b/index.html
@@ -149,7 +149,12 @@
         </div>
 
         <div class="parte-destra">
+        <a href="#"> <i class="fas fa-sliders-h"></i></a>
+        <a href="#"><i class="fas fa-volume-up"></i></a>
+        <a href="#"><i class="fas fa-desktop"></i></a>
+        <div class="barra-volume">
 
+        </div>
         </div>
       </footer>
   </body>
