--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <i class="fas fa-user-circle"></i> <a href="#">John Doe</a>
         </div>
       </section>
+      </div>
       </header>
       <section id="upgrade">
         <button type="button" name="button">EFFETTUA L'UPGRADE</button>
@@ -106,7 +107,7 @@
           <img src="img/einaudi.jpeg" alt="">
         </div>
       </section>
-      </div>
+
 
       <footer>
 
@@ -130,20 +131,15 @@
         <!-- parte centrale -->
         <div class="parte-centrale">
           <div class="bottoni-riproduzione">
-            <div>
-             <p id="minuto-sinistra">0:25</p>
-            </div>
             <div class="bottoni">
               <a href="#">  <i class="fas fa-volume-down"></i>
                 <i class="far fa-play-circle"></i>
                 <i class="fas fa-volume-up"></i> </a> <br>
             </div>
-
-
             <div class="barra">
-            </div>
-            <div>
-              <p id="minuto-destra">4:35</p>
+              <p>0:25</p>
+              <hr class="player">
+              <p>4:35</p>
             </div>
           </div>
         </div>
