--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <i class="fas fa-download"></i> <a href="#">Installa app</a>
         </div>
           <hr>
-        <div class="account">
+        <div id="account">
           <i class="fas fa-user-circle"></i> <a href="#">John Doe</a>
         </div>
       </section>
@@ -153,5 +153,8 @@
         </div>
         </div>
       </footer>
+      <script type="text/javascript" src="js/script.js">
+
+		  </script>
   </body>
 </html>
